// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > Snapshot: No props 1`] = `
<nav
  class="ucl-timetable-breadcrumbs"
  data-testid="ucl-timetable-breadcrumbs"
>
  <span
    class="css-4ys53n"
  >
    <span
      class="css-0 ucl-timetable-breadcrumb ucl-timetable-breadcrumb--active"
      data-testid="ucl-timetable-breadcrumb"
    >
      Home
    </span>
    <svg
      class="ucl-icon css-1ez1cy1"
      data-testid="ucl-icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="9 18 15 12 9 6"
      />
    </svg>
  </span>
  <span
    class="css-4ys53n"
  >
    <a
      class="ucl-link ucl-timetable-breadcrumb ucl-timetable-breadcrumb--inactive css-hr2cbw"
      data-testid="ucl-timetable-breadcrumb"
      href="/showcase"
    >
      Timetable
    </a>
    <svg
      class="ucl-icon css-1ez1cy1"
      data-testid="ucl-icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="9 18 15 12 9 6"
      />
    </svg>
  </span>
  <span
    class="css-4ys53n"
  >
    <a
      class="ucl-link ucl-timetable-breadcrumb ucl-timetable-breadcrumb--inactive css-hr2cbw"
      data-testid="ucl-timetable-breadcrumb"
      href="/showcase/breadcrumbs"
    >
      Personal
    </a>
  </span>
</nav>
`;

exports[`Breadcrumbs > snapshot: Custom Test ID 1`] = `
<nav
  class="ucl-timetable-breadcrumbs"
  data-testid="custom-testid"
>
  <span
    class="css-4ys53n"
  >
    <span
      class="css-0 ucl-timetable-breadcrumb ucl-timetable-breadcrumb--active"
      data-testid="custom-testid-1"
    >
      Home
    </span>
    <svg
      class="ucl-icon css-1ez1cy1"
      data-testid="ucl-icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="9 18 15 12 9 6"
      />
    </svg>
  </span>
  <span
    class="css-4ys53n"
  >
    <a
      class="ucl-link ucl-timetable-breadcrumb ucl-timetable-breadcrumb--inactive css-hr2cbw"
      data-testid="custom-testid-2"
      href="/showcase"
    >
      Timetable
    </a>
    <svg
      class="ucl-icon css-1ez1cy1"
      data-testid="ucl-icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="9 18 15 12 9 6"
      />
    </svg>
  </span>
  <span
    class="css-4ys53n"
  >
    <a
      class="ucl-link ucl-timetable-breadcrumb ucl-timetable-breadcrumb--inactive css-hr2cbw"
      data-testid="custom-testid-3"
      href="/showcase/breadcrumbs"
    >
      Personal
    </a>
  </span>
</nav>
`;
